apps/base/vikunja/vikunja.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: vikunja
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec: 
      containers:
        - name: vikunja
          image: vikunja/vikunja
          ports:
            - containerPort: 3456
          volumeMounts:
            - name: vikunja-files
              mountPath: /app/vikunja/files
      volumes:
        - name: vikunja-files
          persistentVolumeClaim:
            claimName: vikunja-files-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja 
spec:
  ports:
    - port: 3456
      targetPort: 3456
  selector:
    app: vikunja
