apps/base/vikunja/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
  namespace: vikunja 
spec:
  ingressClassName: traefik
  rules:
    - host: vikunja.kptasznik.net
      http:
        paths:
          - backend:
              service:
                name: vikunja 
                port:
                  number: 3456
            path: /
            pathType: Prefix
